--- a/layout/_partial/google_analytics.ejs
+++ b/layout/_partial/google_analytics.ejs
@@ -6,7 +6,7 @@
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = 'js/ga.js';
+    ga.src = '<%- config.root %>js/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
