--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -11,10 +11,10 @@ font-serif = "Georgia", serif
 font-mono = Monaco, Menlo, Consolas, Courier New, monospace
 font-title = "Lato", Helvetica Neue, Helvetica, Arial, sans-serif
 
-@import url("//fonts.googleapis.com/css?family=Lato:400,400italic")
+//@import url("//fonts.googleapis.com/css?family=Lato:400,400italic")
 
 font-icon = FontAwesome
-font-icon-path = 'font/fontawesome-webfont'
+font-icon-path = 'http://cdn.staticfile.org/font-awesome/4.0.1/fonts/fontawesome-webfont'
 
 @font-face {
   font-family 'FontAwesome'
