不使用emoji插件

--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -1,6 +1,6 @@
 <script src="http://cdn.staticfile.org/jquery/2.0.3/jquery.js"></script>
 <script src="http://cdn.staticfile.org/imagesloaded/3.0.4/imagesloaded.pkgd.min.js"></script>
-<script src="<%- config.root %>js/gallery.js"></script>
+<%- qnjs('gallery.js') %>
 
 <% if (config.disqus_shortname){ %>
 <script type="text/javascript">
