--- a/layout/_partial/baidu_analytics.ejs
+++ b/layout/_partial/baidu_analytics.ejs
@@ -1,9 +1,9 @@
 <% if (theme.baidu_analytics){ %>
-<script type="text/javascript">
+<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = '<%- qnurl("js/hm.js") %>';
+  hm.src = "//hm.baidu.com/hm.js?519f6bcea13a06bb44fb9fd6f4d1d540";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
