--- a/layout/_partial/comment.ejs
+++ b/layout/_partial/comment.ejs
@@ -6,10 +6,13 @@
       if (theme.facebook) { %>
       <%- partial('_partial/facebook_comment', {fbConfig: theme.facebook}) %>
       <% } %>
-  <% } else if(config.disqus_shortname) { %>
+  <% } else if(theme.comment_provider == "disqus" && config.disqus_shortname) { %>
   <div id="disqus_thread">
     <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </div>
-  <% } %>
+  <% } else if(config.duoshuo_shortname){ %>
+    <!-- Duoshuo Comment BEGIN -->
+    <div class="ds-thread" data-thread-key="<%= page.slug %>"></div>
+  <%}%>
 </section>
 <% } %>
