--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -30,7 +30,7 @@
         </div>
         <% } else if(item.comment && config.duoshuo_shortname){ %> 
           <div class="alignright">
-          <a href="/post/<%- item.slug %>#comment" 
+          <a href="/post/<%- item.slug %>#comments" 
             class="comment-link ds-thread-count" 
             data-thread-key="<%- item.slug %>"
             >Comments</a>
