--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -4,5 +4,7 @@
   <% } else { %>
   &copy; <%= new Date().getFullYear() %> <%= config.title %>
   <% } %>
+  (PowerBy <a href="http://zespia.tw/hexo">Hexo</a>. Hosting on <a href="https://github.com/">GitHub</a>.)
 </div>
+
 <div class="clearfix"></div>
