--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -22,7 +22,7 @@ var disqus_identifier = '<%= page.slug %>';
 
 <% if(config.duoshuo_shortname){ %>
 <script type="text/javascript">
-var duoshuoQuery = {short_name:"guoyukun"};
+var duoshuoQuery = {short_name:"guoyukun", theme : 'none'};
   (function() {
     var ds = document.createElement('script');
     ds.type = 'text/javascript';ds.async = true;
