--- a/layout/_partial/comment.ejs
+++ b/layout/_partial/comment.ejs
@@ -1,5 +1,5 @@
 <% if (page.comments){ %>
-<section id="comment">
+<section id="comments">
   <h1 class="title"><%= __('comment') %></h1>
 
   <% if (theme.comment_provider == "facebook") {
@@ -12,7 +12,7 @@
   </div>
   <% } else if(config.duoshuo_shortname){ %>
     <!-- Duoshuo Comment BEGIN -->
-    <div class="ds-thread" data-thread-key="<%= page.slug %>"></div>
+    <div class="ds-thread" data-title="<%= page.title %>" data-thread-key="<%= page.slug %>" data-author-key="guoyukun" data-url="<%- config.url %>/post/<%- page.slug %>"></div>
   <%}%>
 </section>
 <% } %>
