--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -15,7 +15,9 @@
         <%- item.excerpt %>
       <% } else { %>
         <%- item.content %>
+
       <% } %>
+
     </div>
     <footer>
       <% if (index){ %>
@@ -40,6 +42,7 @@
         <%- partial('post/category') %>
         <%- partial('post/tag') %>
         <%- partial('post/share') %>
+        <%- partial('post/article_nav') %>
       <% } %>
       <div class="clearfix"></div>
     </footer>
